--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "pfx-to-pem"
 version = "1.0.0"
 edition = "2021"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,6 +12,7 @@ anyhow = "1.0"
 clap = { version = "4.5", features = ["derive", "env"] }
 p12-keystore = "0.1"
 pem = "3.0"
+x509-parser = "0.16"
 
 env_logger = "0.11"
 log = "0.4"
