--- a/deny.toml
+++ b/deny.toml
@@ -13,8 +13,12 @@ no-default-features = false
 feature-depth = 1
 
 [licenses]
-allow = ["Apache-2.0", "BSD-3-Clause", "BSL-1.0", "MIT", "Unicode-DFS-2016"]
 confidence-threshold = 0.8
+allow = ["Apache-2.0", "BSD-3-Clause", "BSL-1.0", "MIT"]
+exceptions = [
+    # Use exceptions for these as they only have a single user
+    { allow = ["Unicode-DFS-2016"], crate = "unicode-ident" },
+]
 
 [licenses.private]
 ignore = true
@@ -25,6 +29,17 @@ wildcards = "deny"
 highlight = "all"
 workspace-default-features = "allow"
 external-default-features = "allow"
+deny = [
+    { crate = "git2", use-instead = "gix" },
+    { crate = "openssl", use-instead = "rustls" },
+    { crate = "openssl-sys", use-instead = "rustls" },
+    "libssh2-sys",
+    { crate = "cmake", use-instead = "cc" },
+    { crate = "windows", reason = "bloated and unnecessary", use-instead = "ideally inline bindings, practically, windows-sys" },
+]
+skip-tree = [
+    { crate = "windows-sys@0.48.0", reason = "a foundational crate for many that bumps far too frequently to ever have a shared version" },
+]
 
 [sources]
 unknown-registry = "deny"
