--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,20 @@
 [package]
-name = "pfx-to-pem"
+name = "pfxers"
 version = "1.0.0"
 edition = "2021"
-publish = false
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT OR Apache-2.0"
+description = "Cross-platformTUI allowing to easily extract and convert information from PFX and PEM certificates and keys"
+repository = "https://github.com/s-ted/pfxers"
+keywords = ["PFX", "PEM", "certificate", "TUI"]
+categories = ["command-line-utilities"]
 
 [dependencies]
 color-eyre = "0.6"
 thiserror = "1.0"
 
-better-panic = "0.3"
 clap = { version = "4.5", features = ["derive", "env", "cargo", "wrap_help"] }
-human-panic = "1.2"
+better-panic = "0.3"
+human-panic = "2.0"
 tracing = "0.1"
 tracing-error = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
@@ -22,9 +24,6 @@ strip-ansi-escapes = "0.2"
 p12-keystore = "0.1"
 pem = "3.0"
 x509-parser = "0.16"
-
-env_logger = "0.11"
-log = "0.4"
 
 hide = "0.1"
 
